--- a/appToDo/style.css
+++ b/appToDo/style.css
@@ -11,6 +11,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
 }
+
 /*                                                                                            EDITOR */
 /* <section class="editor__wrapper editor__wrapper--task">
         <form action="" class="editor__new editor__new--task">
@@ -27,6 +28,7 @@ body {
 .editor {
   width: 100%;
 
+
   height: 20vh;
   min-height: 150px;
 
@@ -37,10 +39,17 @@ body {
   justify-content: center;
   align-items: center;
 }
+.editor *{
+  font-size: 1.2em;
+
+}
 
 .editor__wrapper {
   height: 100%;
   flex-basis: 50%;
+  min-width: 100px;
+
+  
   /* flex C */
   display: flex;
   justify-content: space-around;
@@ -50,17 +59,14 @@ body {
 .editor__panel {
   height: 100%;
   width: 100%;
+  
   /* flex C */
   display: flex;
   justify-content: space-around;
   align-items: stretch;
 }
-.editor__category {
-}
-.editor__desribe {
-}
-.editor__submit--task {
-}
+
+
 /*                                                                  new task */
 
 .editor__wrapper--task {
@@ -69,11 +75,62 @@ body {
 .editor__panel--task {
   flex-direction: column;
 }
+.editor__label--task{
+  height:20%;
+  display: flex;
+  align-items: center;
+
+}
+.editor__category{
+  height: 30%;
+}
+.editor__describe--task {
+  flex-grow: 1;
+  background-color: rgba(239, 171, 31);
+  border: none;  
+}
+.editor__submit--task {
+  flex-basis: 30%;
+
+}
+/* .editor__e{
+  <section class="editor__wrapper editor__wrapper--search">
+      <form action="" class="editor__panel editor__panel--search">
+        <input class="editor__search" type="text" />
+      </form>
+      <button class="editor__create">Create Category</button>
+    </section>
+} */
+
+/*                                                                     search panel*/
+.editor__wrapper--search {
+  /* box-shadow: inset 0 0 10px #8a8888; */
+  /* flex C */
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.editor__panel--search {
+  height: 50%;
+  /* flex C */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.editor__search {
+  width: 80%;
+}
+
+.editor__create {
+  height: 30%;
+  width: 100%;
+}
+
+
 
 /*                                                                  new category */
 .editor__wrapper--category {
   /* background: cadetblue;*/
-  display: none;
 }
 
 .editor__panel--category {
@@ -99,26 +156,7 @@ body {
 .editor__range {
   width: 100%;
 }
-/*                                                                     search panel*/
-.editor__wrapper--search {
-  box-shadow: inset 0 0 10px #8a8888;
 
-  /* flex C */
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-.editor__panel--search {
-  height: auto;
-}
-.editor__search {
-  width: 100%;
-}
-.editor__submit--search {
-}
-.editor__create {
-  width: 100%;
-}
 /*                             
          
                   
@@ -208,4 +246,9 @@ body {
   width: 50px;
   height: 20px;
   z-index: 3;
+}
+
+.off{
+  display: none;
+
 }
