--- a/appToDo/style.css
+++ b/appToDo/style.css
@@ -83,6 +83,8 @@ body {
 }
 .editor__category{
   height: 30%;
+  border: none;
+  box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
 }
 .editor__describe--task {
   flex-grow: 1;
@@ -91,6 +93,10 @@ body {
 }
 .editor__submit--task {
   flex-basis: 30%;
+  border: none;
+  box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
+  border-right: 1px solid darkgray;
+
 
 }
 /* .editor__e{
@@ -119,11 +125,15 @@ body {
 }
 .editor__search {
   width: 80%;
+  border-radius: 50px;
+  padding-left: 10px;
 }
 
 .editor__create {
   height: 30%;
   width: 100%;
+  border: none;
+  box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
 }
 
 
@@ -144,7 +154,7 @@ body {
 }
 
 .editor__label {
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: bold;
 }
 .editor__color {
@@ -197,7 +207,7 @@ body {
 
   list-style-type: none;
   box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0px 20px 10px -15px rgba(0, 0, 0, 0.75);
+  /* box-shadow: inset 0px 20px 10px -15px rgba(0, 0, 0, 0.75); */
 
   transition: 0.5s;
 
@@ -227,7 +237,7 @@ body {
   padding: 0.2em;
 
   box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0px 20px 10px -15px rgba(0, 0, 0, 0.75);
+  /* box-shadow: inset 0px 20px 10px -15px rgba(0, 0, 0, 0.75); */
 
   border: none;
 }
