--- a/appToDo/style.css
+++ b/appToDo/style.css
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* *:active{
+  outline: rgba(239, 171, 31) solid 2px;
+
+} */
+
 
 body {
   background-color: rgba(16, 55, 84);
@@ -11,7 +16,25 @@ body {
   color: white;
   font-family: 'Promp';
   font-weight: bold;
+
 }
+
+::-webkit-scrollbar{
+  width: 15px;
+}
+::-webkit-scrollbar-track{
+  background-color:  rgba(239, 171, 31);
+  box-shadow: outline 0 0 5px black;
+
+}
+::-webkit-scrollbar-thumb{
+  background-image: linear-gradient(180deg,rgba(19,19,19,1) 0%,rgba(28,28,28,1) 18%,rgba(43,43,43,1) 48%, rgba(17,17,17,1)80%,rgba(0,0,0,1) );
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(14, 14, 14);
+}
+
 .colorCompose{
   color: white;
   background-color:rgba(51, 171, 177, 1);
@@ -20,11 +43,19 @@ body {
 button, input, select{
   font-family: 'Promp';
   font-weight: bold;
+
 }
 button{
   text-transform: uppercase;
+  cursor: pointer;
+  color: white;
+  background-color: black;
+  background-image: linear-gradient(rgba(19,19,19,1) 0%,rgba(28,28,28,1) 18%,rgba(43,43,43,1) 48%, rgba(17,17,17,1)80%,rgba(0,0,0,1) );
 }
+select{
+  cursor: pointer;
 
+}
 
 select::-ms-expand {
   display: none;
@@ -65,11 +96,9 @@ select::-ms-expand {
   height: 100%;
   flex-basis: 50%;
   min-width: 100px;
-  border: 1px solid silver;
-
   
   /* flex C */
-  display: flex;
+  display: none;
   justify-content: space-around;
   align-items: center;
   box-shadow: inset 0 0 5px #000000;
@@ -95,8 +124,10 @@ select::-ms-expand {
 /*                                                                  new task */
 
 .editor__wrapper--task {
+  box-sizing: content-box;
   background-color: rgba(51, 171, 177, 1);
-
+  /* simple .. */
+  border-right: 4px solid rgba(28,28,28,1);
 }
 .editor__panel--task {
   flex-direction: column;
@@ -112,8 +143,11 @@ select::-ms-expand {
   height: 30%;
   border: none;
   box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  z-index: 1;
 }
 /*  */
+
 .editor__category:after {
   position: absolute;
   content: "";
@@ -128,19 +162,48 @@ select::-ms-expand {
   position: absolute;
   top: calc(150px * .3);
   width: 50%;
-  display: none;
   overflow: hidden;
+  /* flex C */
+  display: none;
+  flex-direction: column;
+
+  transform: translateY(-100%);
+  animation: fadeIn .5s forwards;
   
 }
 
+@keyframes fadeIn {
+  
+  70%{
+    transform: translateY(10%);
+  }
+  100%{
+  transform: translateY(0%);
+
+  }
+}
 .editor__category--option{
+  position: relative;
   display: block;
   /* height: 30px; */
   width: calc(100% - 2px);
   height: calc(150px * .3);
   box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
   border-radius: 50px;
+  border-left: 1px black solid;
+  border-right: 1px black solid;
   text-align: center;
+  cursor: pointer;
+}
+.editor__category--button{
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  height: 80%;
+  font-size: .5em;
+  padding: 5px;
+  border-radius: 50px;
+  transform: translate(-5%,-50%);
 }
 
 .editor__describe--task {
@@ -251,16 +314,12 @@ select::-ms-expand {
 
 
 
-
-
-
-
-
 /*                                         COLORS SELECT                          */
 /*  */
 /*  */
+
 .editor__color{
-  /* border: 1px solid black; */
+  font-size: .6em;
 }
 .editor__color--FFF200{
   background: #FFF200;
@@ -341,6 +400,7 @@ select::-ms-expand {
   background-color: rgba(239, 171, 31);
 
   height: 10vh;
+  min-height: 30px;
   width: 100%;
 
   list-style-type: none;
@@ -348,8 +408,9 @@ select::-ms-expand {
   font-weight: bold;
   box-sizing: border-box;
 
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   transition: 0.5s;
+
 
   /* flex C */
   display: flex;
@@ -364,6 +425,7 @@ select::-ms-expand {
 }
 .main__task {
   padding-left: 10px;
+
 }
 .main__button {
   height: 100%;
@@ -373,29 +435,15 @@ select::-ms-expand {
   box-shadow: inset 0px -20px 10px -15px rgba(0, 0, 0, 0.75);
   border: none;
 }
-.main__button--done {
-}
-.main__button--done::after {
-  content: "";
-  background-color: green;
-  width: 50px;
-  height: 20px;
-  z-index: 3;
-}
-.main__button--done::before {
-  content: "";
-  background-color: green;
-  width: 50px;
-  height: 20px;
-  z-index: 3;
+
+
+
+
+
+.displayFlex{
+  display: flex;
 }
 
-.off{
-  display: none;
-}
-.displayBlock{
-  display: block;
-}
 
 
 
