--- a/zuperPortfolioPrace/5/style.css
+++ b/zuperPortfolioPrace/5/style.css
@@ -19,6 +19,7 @@ body{
   font-size: 20px;
   /* overflow: hidden; */
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 
@@ -35,162 +36,6 @@ body{
   align-items: center;
 
 }
-
-/* header section */
-.header__slider{
-  position: relative;
-  color: var(--bege);
-  width: var(--wrapperSize);
-  flex-grow: 1;
-  
-  /* flex C */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-.header__slider::after{
-  position: absolute;
-  content: "";
-  right: 0%;
-  bottom: -2.5%;
-  width: 3px;
-  height: 5%;
-  background-color: var(--bege);
-
-}
-
-
-/* counter(dots and number) in header */
-.slider__counter{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  height: 50%;
-  transform: translate(-50%,-50%);
-  /* flex C */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-.counter__number{
-  transform: rotate(90deg);
-
-  box-sizing: border-box;
-  position: relative;
-
-}
-.counter__number::before{
-  position: absolute;
-  top: 50%;
-  left: -200%;
-  content: "";
-  width: 100%;
-  height: 10%;
-
-  background-color: var(--bege);
-
-  transform: translateY(-50%);
-
-}
-.counter__dot{
-  display: block;
-  box-sizing: border-box;
-  width: .4em;
-  height: .4em;
-  /* margin-left: 1.5em; */
-  border-radius: 50%;
-  background: var(--bege);
-}
-
-
-/* header slider */
-.slide{
-  /* position: relative; */
-  padding-left: 10vw;
-  padding-top: 25vh;
-  width: 100%;
-
-/* flex C */
-display: flex;
-flex-direction: column;
-}
-.slide__h1{
-  font-size:4.5vw;
-  letter-spacing: .15em;
-  width: 75%;
-  margin-bottom: 7%;
-  
-}
-.slide__button{
-  position: relative;
-  width: 50%;
-  height: 50px;
-  padding: 0;
-  background-color: transparent;
-  border: 3px solid white;
-  color: white;
-}
-.slide__button::after{
-  content: "";
-  position: absolute;
-  right: 7%;
-  top: 50%;
-  width: 12%;
-  height: 1px;
-  background-color: #fff;
-
-}
-.slide__button::before{
-  content: "";
-  position: absolute;
-  right: 7%;
-  top: 50%;
-  width: 5px;
-  height: 5px;
-  border-top: 1px white solid;
-  border-right: 1px white solid;
-
-  transform:translateY(-50%) rotate(45deg);
-
-}
-.slide__button:hover{
-  background-color: #fff;
-  color: rgba(0, 0, 0, .8);
-
-}
-.slide__button:hover::after{
-  background-color: rgba(0, 0, 0, .8); 
-}
-.slide__button:hover::before{
-  border-color: rgba(0, 0, 0, .8);
-}
-
-
-
-
-/* slide info container --> mouse ico */
-.slide__info{
-
-}
-.slide__mouse{
-
-}
-.slide__direction{
-
-}
-
-/* slider right label */
-.slider__label{
-  position: absolute;
-  top: 50%;
-  right: 0%;
-  
-  transform: translate(50%,50%) rotate(90deg);
-  font-size: .6em;
-}
-
-
 
 
 
@@ -285,6 +130,178 @@ flex-direction: column;
 
 
 
+
+
+/* header section */
+.header__slider{
+  position: relative;
+  color: var(--bege);
+  width: var(--wrapperSize);
+  flex-grow: 1;
+  
+  /* flex C */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.header__slider::after{
+  position: absolute;
+  content: "";
+  right: 0%;
+  bottom: -2.5%;
+  width: 3px;
+  height: 5%;
+  background-color: var(--bege);
+
+}
+
+
+/* counter(dots and number) in header */
+.slider__counter{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 50%;
+  transform: translate(-50%,-50%);
+  /* flex C */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.counter__number{
+  transform: rotate(90deg);
+
+  box-sizing: border-box;
+  position: relative;
+
+}
+.counter__number::before{
+  position: absolute;
+  top: 50%;
+  left: -200%;
+  content: "";
+  width: 100%;
+  height: 10%;
+
+  background-color: var(--bege);
+
+  transform: translateY(-50%);
+
+}
+.counter__dot{
+  display: block;
+  box-sizing: border-box;
+  width: .4em;
+  height: .4em;
+  /* margin-left: 1.5em; */
+  border-radius: 50%;
+  background: var(--bege);
+}
+
+
+/* header slider */
+.slide{
+  /* position: relative; */
+  /* padding-left: 50px;s */
+  /* padding-top: 25vh; */
+  width: 100%;
+
+/* flex C */
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+}
+.slide__h1{
+  font-size:2.5em;
+  letter-spacing: .15em;
+  /* width: 75%; */
+  margin-bottom: 7%;
+  
+}
+.slide__button{
+  position: relative;
+  height: 50px;
+  padding-left: 10%;
+  padding-right: 10%;
+
+  background-color: transparent;
+  border: 3px solid white;
+  color: white;
+}
+.slide__button::after{
+  content: "";
+  position: absolute;
+  right: 7%;
+  top: 50%;
+  width: 12%;
+  height: 1px;
+  background-color: #fff;
+
+}
+.slide__button::before{
+  content: "";
+  position: absolute;
+  right: 7%;
+  top: 51%;
+  width: 5px;
+  height: 5px;
+  border-top: 1px white solid;
+  border-right: 1px white solid;
+
+  transform:translateY(-50%) rotate(45deg);
+
+}
+.slide__button:hover{
+  background-color: #fff;
+  color: rgba(0, 0, 0, .8);
+
+}
+.slide__button:hover::after{
+  background-color: rgba(0, 0, 0, .8); 
+}
+.slide__button:hover::before{
+  border-color: rgba(0, 0, 0, .8);
+}
+
+
+
+
+/* slide info container --> mouse ico */
+.slide__info{
+
+}
+.slide__mouse{
+
+}
+.slide__direction{
+
+}
+
+/* slider right label */
+.slider__label{
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  
+  transform: translate(50%,50%) rotate(90deg);
+  font-size: .6em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*               MAIN  */
 .main{
   /* flex C */
@@ -359,7 +376,14 @@ flex-direction: column;
 .displayNone{
   display: none;
 }
-
+@media only screen and (max-width: 1000px) {
+  :root{
+    /* --wrapperSize : 80%; */
+  }
+  body {
+    font-size: 15px;
+  }
+}
 @media only screen and (max-width: 640px) {
   :root{
     --wrapperSize : 80%;
@@ -374,5 +398,16 @@ flex-direction: column;
   }
   body {
     font-size: 12px;
+  }
+  .header__nav--menu{
+    display: none;
+  }
+}
+@media only screen and (max-width: 320px) {
+  :root{
+    --wrapperSize : 95%;
+  }
+  body {
+    font-size: 10px;
   }
 }
