--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -27,10 +27,11 @@ body{
 .header{
   position: relative;
   background-image: url(img/bgc.jpg);
-  background-color: rgba(0, 0, 0, .6);
+  box-shadow: inset 0 0 0 100em rgba(0, 0, 0, .85);
+  
 
-  background-size: cover;
-  height: 100vh;
+  background-size: 100% 100%;
+  height: calc(100vh + 40px);
   text-transform: uppercase;
   /* flex C */
   display: flex;
@@ -156,6 +157,7 @@ body{
   width: 3px;
   height: 5%;
   background-color: var(--bege);
+  z-index: 1;
 
 }
 
