--- a/zuperPortfolioPrace/5/extra.css
+++ b/zuperPortfolioPrace/5/extra.css
@@ -13,6 +13,7 @@
   @media only screen and (max-width: 640px) {
     :root{
       --wrapperSize : 80%;
+      --logoSize: 50px;
     }
     body {
       font-size: 13px;
