--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -14,6 +14,7 @@ ul,ol{
   --silver: #a7a691;
   --white: white;
 
+  --minSectionSize: 320px;
   --wrapperSize : 60%;
   --logoSize: 100px;
 }
@@ -32,12 +33,15 @@ body{
   position: relative;
   background-image: url(img/wooder.png), url(img/wooder2.png);
   background-position: right top, left bottom;
-  box-shadow: inset 0 0 0 100em rgba(0, 0, 0, .88);
-  
+  /* box-shadow: inset 0 0 0 80vw rgba(0, 0, 0, .88); */
+  box-shadow:inset 100vw 0 0 0 rgba(0, 0, 0, .88), inset 35vw 0 5px 0 rgba(0, 0, 0, .15),inset -49.5vw 0 0 0 rgba(0, 0, 0, .15);
 
+
+  
   background-size:50% 100%,50% 100%;
   background-repeat: no-repeat,no-repeat;
   height: calc(100vh + 40px);
+  min-height: var(--minSectionSize);
   text-transform: uppercase;
   /* flex C */
   display: flex;
@@ -46,16 +50,7 @@ body{
   align-items: center;
 
 }
-.header::after{
-  content: "";
-  position: absolute;
-  left: 35%;
-  height: 100%;
-  width: 15%;
-  background-color: rgba(255,255,255,0.005);
-  box-shadow: 1px 0px 3px 0px rgba(0,0,0,0.45);
-  
-}
+
 
 
 
@@ -70,7 +65,7 @@ body{
   /* flex C */
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-between;  
   align-items: center;
 }
 /*                all nav-s */
@@ -101,7 +96,7 @@ body{
 .hamb__list{
   /* to be over languages menu */
   z-index: 1;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, .98);
@@ -125,11 +120,11 @@ body{
 }
 
 .menu__list{
-  width: 100%;
+  width: var(--wrapperSize);
   /* flex C */
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 /* .menu__option{
   
@@ -200,7 +195,7 @@ body{
 /* counter(dots and number) in header */
 .slider__counter{
   position: absolute;
-  top: calc(60%);/*   here  we can aster the distance from top*/
+  top: calc(50%);/*   here  we can aster the distance from top*/
   left: 0;
   height: 50%;
   transform: translate(-50%,-50%);
@@ -245,39 +240,45 @@ body{
 
 /* header slider */
 .slide{
-  /* position: relative; */
+  position: relative;
   /* padding-left: 50px;s */
   /* margin-bottom: 5%; */
   /* width: 100%; */
-  transform: translateY(0%);
+  /* transform: translateY(0%); */
 
 /* flex C */
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 .slide__h1{
   font-size:2.5em;
   letter-spacing: .15em;
-  /* width: 75%; */
   margin-bottom: 7%;
   
 }
 .slide__button{
   position: relative;
-  height: 50px;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-left: 15%;
+  padding-right: 15%;
 
   background-color: transparent;
-  border: 3px solid white;
+  border: white solid 2px;
+  border-left: 1px white solid;
+  border-right: 1px white solid;
+
+  font-size: .6em;
+  font-weight: 600;
+  text-transform: uppercase;
   color: white;
 }
 .slide__button::after{
   content: "";
   position: absolute;
-  right: 7%;
+  right: 15%;
   top: 50%;
   width: 12%;
   height: 1px;
@@ -287,14 +288,14 @@ align-items: flex-start;
 .slide__button::before{
   content: "";
   position: absolute;
-  right: 7%;
-  top: 51%;
+  right:15%;
+  top: 50%;
   width: 5px;
   height: 5px;
   border-top: 1px white solid;
   border-right: 1px white solid;
 
-  transform:translateY(-50%) rotate(45deg);
+  transform:translateY(-45%) rotate(45deg);
 
 }
 .slide__button:hover{
@@ -314,15 +315,48 @@ align-items: flex-start;
 
 /* slide info container --> mouse ico */
 .slide__info{
-
+  font-size: .7em;
+  transform: translateX(-25%);
+  /* flex C */
+  display: flex;
+  flex-direction: column;
 }
 .slide__mouse{
+  margin-top: 10px;
+  font-size: 2em;
+  transform: rotate(15deg);
+  color: black;
 
 }
 .slide__direction{
+  position: relative;
+  font-size: .8em;
+  color: rgba(190, 166, 124,.3);
+  transform: rotate(90deg) translateY(30%);
 
+  margin-top: calc(130% + 2em);
 }
-
+.slide__direction::after{
+  content: "";
+  position: absolute;
+  left: -130%;
+  top:50%;
+  transform: translateY(-50%);
+  width: 100%;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 1);
+}
+.slide__direction::before{
+  content: "";
+  position: absolute;
+  left: calc(-30% - 5px);
+  top:50%;
+  transform: translateY(-50%) rotate(45deg);
+  width: 5px;
+  height: 5px;
+  border-top: 1px rgba(255, 255, 255, .99) solid;
+  border-right: 1px rgba(255, 255, 255, .99) solid;
+}
 /* slider right label */
 .slider__label{
   position: absolute;
