--- a/zuperPortfolioPrace/5/products.css
+++ b/zuperPortfolioPrace/5/products.css
@@ -45,6 +45,7 @@
   }  
   /* main product article */
   .main__product{
+    position: relative;
     height: 75vh;
     min-height: calc(var(--minSectionSize));
     width: var(--wrapperSize);
@@ -57,22 +58,27 @@
   
   /* product describe WRAPPER */
   .product__describe{
+    width: 100%;
     position: absolute;
-    left: 30%;
+    left: 15%;
+    animation: goInRight 1s forwards;
+    transform: translateX(-50vw);
+    
     z-index: 1;
     text-align: left;
     /* flex C */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
+    justify-content: center;
+    align-items: stretch;
   }
 
   .product__h2{
-
+    font-size: 2.2em;
+    color: var(--bege);
   }
   .product__p{
-    width: 25%;
+    width: 40%;
   }
   .product__a{
     text-decoration: none;
