--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -40,7 +40,7 @@ body{
   
   background-size:50% 100%,50% 100%;
   background-repeat: no-repeat,no-repeat;
-  height: calc(100vh + 40px);
+  height: 100vh ;
   min-height: var(--minSectionSize);
   text-transform: uppercase;
   /* flex C */
@@ -50,7 +50,18 @@ body{
   align-items: center;
 
 }
+.header::after{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  height: 5%;
+  /* background-color: var(--white); */
+  /* background-color: rgba(255, 255, 255, .95); */
+  background-image: linear-gradient(90deg,rgba(255, 255, 255, .9) 70%, rgba(255, 255, 255, .35) 70%,rgba(255, 255, 255, .35)100%);
 
+}  
 
 
 
