--- a/zuperPortfolioPrace/5/extra.css
+++ b/zuperPortfolioPrace/5/extra.css
@@ -2,21 +2,63 @@
 .displayNone{
     display: none;
   }
-  @media only screen and (max-width: 1000px) {
-    :root{
-      /* --wrapperSize : 80%; */
-    }
-    body {
-      font-size: 15px;
-    }
-  }
-  @media only screen and (max-width: 640px) {
+  @media only screen and (max-width: 1620px){
     :root{
       --wrapperSize : 80%;
       --logoSize: 50px;
     }
     body {
-      font-size: 13px;
+      font-size: 21px;
+    }
+  }
+  @media only screen and (max-width: 1300px){
+    :root{
+      --wrapperSize : 80%;
+      --logoSize: 50px;
+    }
+    body {
+      font-size: 19px;
+    }
+  }
+  @media only screen and (max-width: 1000px){
+    :root{
+      --wrapperSize : 80%;
+      --logoSize: 50px;
+    }
+    body {
+      font-size: 18px;
+    }
+  }
+ @media only screen and (max-width: 800px) and (orientation: landscape){
+    :root{
+      --wrapperSize : 80%;
+      --logoSize: 50px;
+    }
+    body {
+      font-size: 16px;
+    }
+    .header__nav--menu{
+      display: none;
+    }
+  }
+  @media only screen and (max-width: 800px) and (orientation: portrait){
+    :root{
+      --wrapperSize : 80%;
+      --logoSize: 50px;
+    }
+    body {
+      font-size: 21px;
+    }
+    .header__nav--menu{
+      display: none;
+    }
+  }
+  @media only screen and (max-width: 640px) {
+    :root{
+      --wrapperSize : 80%;
+    }
+    body {
+      font-size: 14px;
     }
   }
   @media only screen and (max-width: 480px) {
@@ -24,17 +66,15 @@
       --wrapperSize : 90%;
     }
     body {
-      font-size: 12px;
+      font-size: 13px;
     }
-    .header__nav--menu{
-      display: none;
-    }
+   
   }
   @media only screen and (max-width: 320px) {
     :root{
       --wrapperSize : 95%;
     }
     body {
-      font-size: 10px;
+      font-size: 12px;
     }
   }
