--- a/zuperPortfolioPrace/5/header.css
+++ b/zuperPortfolioPrace/5/header.css
@@ -2,7 +2,9 @@
 *{
     margin: 0;
     padding: 0;
+    font-size: 1em;
 }
+
 ul,ol{
   list-style: none;
 }
@@ -21,9 +23,9 @@ ul,ol{
 
 
 body{
-  font-size: 20px;
+  font-size: 26px;
   /* overflow: hidden; */
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lobster";
   overflow-x: hidden;
 }
 
@@ -40,7 +42,7 @@ body{
   
   background-size:50% 100%,50% 100%;
   background-repeat: no-repeat,no-repeat;
-  height: calc(100vh + 40px);
+  height: 100vh;
   min-height: var(--minSectionSize);
   text-transform: uppercase;
   /* flex C */
@@ -50,7 +52,18 @@ body{
   align-items: center;
 
 }
+.header::after{
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  width: 50%;
+  height: 5vh;
+  /* background-color: var(--white); */
+  /* background-color: rgba(255, 255, 255, .95); */
+  background-image: linear-gradient(90deg,rgba(255, 255, 255, .9) 70%, rgba(255, 255, 255, .35) 70%,rgba(255, 255, 255, .35)100%);
 
+}  
 
 
 
@@ -60,7 +73,10 @@ body{
   width: 100%;
   margin-top: 10px;
   color: var(--silver);
-  font-family: 'Anton', sans-serif;
+  font-family: 'Lobster';
+  
+  /* font-family: 'Anton', sans-serif; */
+
   font-weight: 500;
   font-size: .9em;
   /* flex C */
@@ -88,7 +104,10 @@ body{
   /* flex E */
 
 }
-
+.hamb__option--logo,.menu__option--logo{
+  text-transform: capitalize;
+  color: var(--bege);
+}
 
 /*                NAV 1 hamb */
 .header__nav--hamb{
@@ -110,6 +129,7 @@ body{
   
 }
 .hamb__option{
+  color: var(--bege);
   height: 50px;
   line-height: 50px;
 }
@@ -130,7 +150,9 @@ body{
 /* .menu__option{
   
 } */
-
+.hamb__option:hover,.menu__option:hover{
+  color: white;
+}
 
 
 /*                NAV 3 languages */
@@ -141,6 +163,9 @@ body{
   height: 32px; */
   /* margin-left: 15%; */
   margin-right: calc(1.5% + 5px);
+}
+.header__nav--languages:hover{
+  color:white;
 }
 .header__nav--languages::after{
   content: "";
@@ -254,6 +279,7 @@ body{
   align-items: flex-start;
 }
 .slide__h1{
+  text-transform: capitalize;
   font-size:2.5em;
   letter-spacing: .15em;
   margin-bottom: 7%;
@@ -326,7 +352,7 @@ body{
   margin-top: 10px;
   font-size: 2em;
   transform: rotate(15deg);
-  color: black;
+  color: var(--bege);
 
 }
 .slide__direction{
